--- a/index.html
+++ b/index.html
@@ -1,15 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
 
-  <!DOCTYPE html>
-  <html lang="en">
-    <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Design Elegant Personal Portfolio</title>
-    </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description"
+    content="Discover Shashi Bhushan's portfolio showcasing visionary leadership in jewelry business innovation, expertise in design, and future-forward strategies." />
+  <meta name="keywords"
+    content="Shashi Bhushan, jewelry business, innovation, visionary leader, portfolio, design expertise" />
+  <meta property="og:title" content="Shashi Bhushan | Visionary Leader in Jewelry Business Innovation" />
+  <meta property="og:description"
+    content="Explore the professional portfolio of Shashi Bhushan, a leader in jewelry innovation and design." />
+  <meta property="og:image" content="/favicon.png" />
+  <meta property="og:url" content="https://yourwebsite.com" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Shashi Bhushan | Visionary Leader in Jewelry Business Innovation" />
+  <meta name="twitter:description"
+    content="Discover Shashi Bhushan's portfolio showcasing visionary leadership in jewelry business innovation." />
+  <meta name="twitter:image" content="/favicon.png" />
+  <title>Shashi Bhushan | Visionary Leader in Jewelry Business Innovation</title>
+  <link rel="icon" type="image/png" href="/favicon.png" />
+</head>
 
-    <body>
-      <div id="root"></div>
-      <script type="module" src="/src/main.jsx"></script>
-    </body>
-  </html>
-  
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.jsx"></script>
+</body>
+
+</html>
