--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     content="Discover Shashi Bhushan's portfolio showcasing visionary leadership in jewelry business innovation." />
   <meta name="twitter:image" content="/favicon.png" />
   <title>Shashi Bhushan | Visionary Leader in Jewelry Business Innovation</title>
-  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 </head>
 
 <body>
